fix: Hide overflow when closed to ensure window in firefox doesn't grow vertically

--- a/blocks/shared-styles/scss/_header-nav.scss
+++ b/blocks/shared-styles/scss/_header-nav.scss
@@ -377,7 +377,6 @@ body.nav-open {
 
   .section-menu {
     padding: 0;
-
     > li {
       font-weight: bold;
       list-style: none;
@@ -406,9 +405,15 @@ body.nav-open {
     }
   }
 
+  &.closed {
+    // hide vertical overflow when closed
+    overflow-y: hidden;
+  }
+
   &.open {
     // dimmed background
     background: rgba(25, 25, 25, 0.5);
+    // scroll and show vertical overflow when open
     overflow-y: scroll;
     transform: translate(0, 0);
     width: 100%;
@@ -421,6 +426,7 @@ body.nav-open {
   }
 
   &.closed {
+    overflow: hidden;
     .section-menu {
       transition: height 100ms ease-in-out 600ms;
     }
